refactor(webhook): P11-09 - move WebhookRepository/WebhookDeliveryRepository access out of WebhookController (P1-05)
PROB-030: WebhookController injected WebhookRepository,
WebhookDeliveryRepository and WebhookMapper directly across listWebhooks(),
deactivateWebhook() and getDeliveryLog(), bypassing the service layer.
Added WebhookService.listActiveWebhooks() and getDeliveryLog(UUID,
Pageable); deactivateWebhook now throws ResourceNotFoundException (404)
instead of IllegalArgumentException (400), preserving the controller's
prior 404 behaviour. Controller now depends only on WebhookService.
WebhookControllerTest (7 tests) rewritten to mock WebhookService; 4 new
WebhookServiceTest tests added. Full suite: 275 tests, 25F+2E=27,
identical to baseline (zero new regressions).